--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="first__block" id="scene-container">
         Discoverthreejs.com - Your First Scene
     </div>
-    <div class="second__block">
+    <div class="second__block" id="scene-container-second">
         
     </div>
     
